ogx/rhoai/templates/ogx/LlamaStackDistribution copy.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: test
spec:
  finalizers:
    - kubernetes
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: lsd-genai-playground-service
  namespace: test
spec:
  path: /
  to:
    kind: Service
    name: lsd-genai-playground-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
